--- a/index.html
+++ b/index.html
@@ -1,26 +1,54 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title> Index </title>
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    </head>
 
-    <body>
+<head>
+    <title> Index </title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+</head>
+
+<body>
+
+    <header>
         <i class="fa fa-user" aria-hidden="true">&nbsp;&nbsp;<b>Shubham Zanwar</b></i>&nbsp;&nbsp;&nbsp;&nbsp;
-        <i class="fa fa-volume-control-phone" aria-hidden="true">&nbsp;&nbsp;<b>+91 950 3924 333</b></i>&nbsp;&nbsp;&nbsp;&nbsp;
-        <i class="fa fa-envelope" aria-hidden="true">&nbsp;&nbsp;<b>shubham.zanwar333@gmail.com</b></i></body></i>&nbsp;&nbsp;
-        <br>
-        <br>
-        
-        <iframe height="500px" width="900px">
+        <i class="fa fa-volume-control-phone" aria-hidden="true">&nbsp;&nbsp;<b>+91 950 3924
+                333</b></i>&nbsp;&nbsp;&nbsp;&nbsp;
+        <i class="fa fa-envelope" aria-hidden="true">&nbsp;&nbsp;<b>shubham.zanwar333@gmail.com</b></i>
+</i>&nbsp;&nbsp;
+</header>
+<hr>
 
-        </iframe>
-        <br>
-        <br>
-        <b>Follow me on: </b>&nbsp;&nbsp;&nbsp;&nbsp;
-        <a href="https://www.facebook.com/" target="_blank"><i class="fa fa-facebook-official" aria-hidden="true"></i></a>&nbsp;&nbsp;
-        <a href="https://www.instagram.com/" target="_blank"><i class="fa fa-instagram" aria-hidden="true"></i></a>&nbsp;&nbsp;
-        <a href="https://twitter.com/tweeter" target="_blank"><i class="fa fa-twitter" aria-hidden="true"></i></a>
-        
-    </body>
+<br>
+
+    <nav>
+        <a href="home.html" target="myFrame">HOME</a>&nbsp;&nbsp;&nbsp;&nbsp;
+        <a href="techStack.html" target="myFrame">TECHNOLOGY STACK</a>&nbsp;&nbsp;&nbsp;&nbsp;
+        <a href="education.html" target="myFrame">EDUCATION</a>&nbsp;&nbsp;&nbsp;&nbsp;
+        <a href="personalDetails.html" target="myFrame">PERSONAL DETAILS</a>&nbsp;&nbsp;&nbsp;&nbsp;
+        <a href="hobbies.html" target="myFrame">HOBBIES</a>&nbsp;&nbsp;&nbsp;&nbsp;
+        <a href="">OTHERS</a>
+
+    </nav>
+
+<br>
+
+<hr>
+
+<iframe name="myFrame" src="" height="500px" width="900px">
+
+</iframe>
+<br>
+
+<hr>
+
+<footer>
+    <b>Follow me on: </b>&nbsp;&nbsp;&nbsp;&nbsp;
+    <a href="https://www.facebook.com/" target="_blank"><i class="fa fa-facebook-official"
+            aria-hidden="true"></i></a>&nbsp;&nbsp;
+    <a href="https://www.instagram.com/" target="_blank"><i class="fa fa-instagram"
+            aria-hidden="true"></i></a>&nbsp;&nbsp;
+    <a href="https://twitter.com/tweeter" target="_blank"><i class="fa fa-twitter" aria-hidden="true"></i></a>
+</footer>
+
+</body>
+
 </html>
