--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
         <a href="education.html" target="myFrame">EDUCATION</a>&nbsp;&nbsp;&nbsp;&nbsp;
         <a href="personalDetails.html" target="myFrame">PERSONAL DETAILS</a>&nbsp;&nbsp;&nbsp;&nbsp;
         <a href="hobbies.html" target="myFrame">HOBBIES</a>&nbsp;&nbsp;&nbsp;&nbsp;
-        <a href="">OTHERS</a>
+        <a href="">OTHERS</a>&nbsp;&nbsp;&nbsp;&nbsp;
+        <a href="contactUs.html" target="myFrame"> CONTACT US</a>
 
     </nav>
 
