--- a/index.html
+++ b/index.html
@@ -4,6 +4,13 @@
 <head>
     <title> Index </title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <style>
+        header {
+            color:aliceblue;
+            background-color: crimson;
+        }
+    </style>
+
 </head>
 
 <body>
