--- a/internalCSS.html
+++ b/internalCSS.html
@@ -7,10 +7,15 @@
         h2 {
             color:blueviolet;
         }
-        p {
-            color:darkgreen;
-            font-size: larger;
-        }
+        
+         .careerObjectives{
+           
+            color:rgb(83, 190, 83);
+            text-transform: uppercase;
+            font-weight: bold;
+            text-align: right;
+
+        } 
 
     </style>
 </head>
@@ -19,7 +24,7 @@
 
     <h2>  Career Objectives </h2>
     <hr>
-    <p>
+    <p class="careerObjectives">
         <strong> Seeking </strong> a <b> challenging</b> and <u> rewarding career </u>
         in a reputed organization where my <mark> technical skills </mark>
         would make  &nbsp; &nbsp; &nbsp; a positive contribution to the organization <br> and <small>guide me </small> in building a rewarding
