--- a/education.html
+++ b/education.html
@@ -3,9 +3,15 @@
     <head>
             <title> Educational Details </title>
             <style>
-                table, th, td {
+                table {
         border: 3px solid rgb(35, 113, 159);
         border-collapse: collapse;
+        margin-right: 80px;
+      }
+      th, td {
+        border: 3px solid rgb(35, 113, 159);
+        border-collapse: collapse;
+        padding: 15px;
       }
               </style>
     </head>
