--- a/internalCSS.html
+++ b/internalCSS.html
@@ -3,6 +3,11 @@
 
 <head>
     <title> Internal CSS </title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Sofia&display=swap" rel="stylesheet">
+
+
     <style>
         h2 {
             color:blueviolet;
@@ -14,6 +19,8 @@
             text-transform: uppercase;
             font-weight: bold;
             text-align: right;
+            font-family: 'Sofia', cursive;
+
 
         } 
 
