--- a/techStack.html
+++ b/techStack.html
@@ -8,7 +8,8 @@
       th,
       td {
         border: 1px solid black;
-        border-collapse: collapse;
+        border-collapse: collapse; 
+        padding: 15px;
       }
     </style>
   </head>
