Index.html and other
Some changes in all the html files

--- a/hobbies.html
+++ b/hobbies.html
@@ -2,7 +2,13 @@
 <html>
     <head>
         <title> My Hobbies </title>
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@600&display=swap" rel="stylesheet">
         <style>
+           * {
+            font-family: 'Josefin Sans', sans-serif;
+        }
             .newClass{
                 margin-bottom: 30px;
             }
