--- a/contactUs.html
+++ b/contactUs.html
@@ -2,6 +2,14 @@
 <html>
     <head>
         <title> Contact Us </title>
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@600&display=swap" rel="stylesheet">
+        <style>
+            * {
+            font-family: 'Josefin Sans', sans-serif;
+        }
+        </style>
     </head>
 
     <body>
