--- a/personalDetails.html
+++ b/personalDetails.html
@@ -3,7 +3,13 @@
 
 <head>
     <title> My Personal Details </title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@600&display=swap" rel="stylesheet">
     <style>
+        body {
+            font-family: 'Josefin Sans', sans-serif;
+        }
         .shubham{
             font-size: large;
             text-transform: uppercase;
