--- a/techStack.html
+++ b/techStack.html
@@ -2,8 +2,15 @@
 <html>
   <head>
     <title>Technology Stack</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@600&display=swap" rel="stylesheet">
 
     <style>
+      * {
+            font-family: 'Josefin Sans', sans-serif;
+        }
+
       table,
       th,
       td {
